--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+dist/
+
 # Created by https://www.toptal.com/developers/gitignore/api/go,macos,jetbrains+all,vscode
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,macos,jetbrains+all,vscode
 
